import {PublicationsListPaging} from './PublicationsListPaging';

function setup(testProps, isShallow = true) {
    const props = {
        classes: {},
        pagingData: testProps.pagingData || {
            from: testProps.from || 0,
            to: testProps.to || 0,
            total: testProps.total || 0,
            per_page: testProps.per_page || 20,
            current_page: testProps.current_page || 1
        },
        disabled: testProps.disabled || false,
        onPageChanged: testProps.onPageChanged || jest.fn(),
        ...testProps
    };
    return getElement(PublicationsListPaging, props, isShallow);
}

describe('PublicationsListPaging renders ', () => {
    it('component with empty paging data', () => {
        const wrapper = setup({});
        expect(toJson(wrapper)).toMatchSnapshot();
    });

    it('component renders as empty due to currentpage set outside range', () => {
        const data = {
            from: 21,
            to: 40,
            total: 60,
            per_page: 20,
            current_page: 20
        };
        const wrapper = setup({pagingData: data});
        expect(toJson(wrapper)).toMatchSnapshot();
    });

    it('component with non-empty paging data, first page', () => {
        const data = {
            from: 1,
            to: 20,
            total: 60,
            per_page: 20,
            current_page: 1
        };
        const wrapper = setup({pagingData: data});
        expect(toJson(wrapper)).toMatchSnapshot();

        // const pages = wrapper.find('.publicationsListPaging .page');
        // expect(pages.length).toBe(3);
        //
        // const selectedPage = wrapper.find('.publicationsListPaging .page.selectedPage');
        // expect(selectedPage.length).toBe(1);
        // expect(selectedPage.props().label).toBe(1);
        //
        // const nextPage = wrapper.find('.pagingNext');
        // expect(nextPage.length).toBe(1);
        //
        // const previousPage = wrapper.find('.pagingPrevious');
        // expect(previousPage.length).toBe(1);
    });

    it('component with non-empty paging data, second page', () => {
        const data = {
            from: 21,
            to: 40,
            total: 60,
            per_page: 20,
            current_page: 2
        };
        const wrapper = setup({pagingData: data});
        expect(toJson(wrapper)).toMatchSnapshot();

        // const pages = wrapper.find('.publicationsListPaging .page');
        // expect(pages.length).toBe(3);
        //
        // const selectedPage = wrapper.find('.publicationsListPaging .page.selectedPage');
        // expect(selectedPage.length).toBe(1);
        // expect(selectedPage.props().label).toBe(2);
        //
        // const nextPage = wrapper.find('.pagingNext');
        // expect(nextPage.length).toBe(1);
        //
        // const previousPage = wrapper.find('.pagingPrevious');
        // expect(previousPage.length).toBe(1);
    });

    it('component with non-empty paging data, last page', () => {
        const data = {
            from: 41,
            to: 60,
            total: 60,
            per_page: 20,
            current_page: 3
        };
        const wrapper = setup({pagingData: data});
        expect(toJson(wrapper)).toMatchSnapshot();

        // const pages = wrapper.find('.publicationsListPaging .page');
        // expect(pages.length).toBe(3);
        //
        // const selectedPage = wrapper.find('.publicationsListPaging .page.selectedPage');
        // expect(selectedPage.length).toBe(1);
        // expect(selectedPage.props().label).toBe(3);
        //
        // const nextPage = wrapper.find('.pagingNext');
        // expect(nextPage.length).toBe(1);
        //
        // const previousPage = wrapper.find('.pagingPrevious');
        // expect(previousPage.length).toBe(1);
    });

    it('component with ellipsis paging results', () => {
        const data = {
            from: 501,
            to: 520,
            total: 1000,
            per_page: 20,
            current_page: 10
        };
        const wrapper = setup({pagingData: data});
        expect(toJson(wrapper)).toMatchSnapshot();

        // const pages = wrapper.find('.publicationsListPaging .page');
        // expect(pages.length).toBe(9);
        //
        // const selectedPage = wrapper.find('.publicationsListPaging .page.selectedPage');
        // expect(selectedPage.length).toBe(1);
        // expect(selectedPage.props().label).toBe(10);
        //
        // const nextPage = wrapper.find('.pagingNext');
        // expect(nextPage.length).toBe(1);
        //
        // const previousPage = wrapper.find('.pagingPrevious');
        // expect(previousPage.length).toBe(1);
    });

    it('component with all fields disabled', () => {
        const data = {
            from: 1,
            to: 20,
            total: 60,
            per_page: 20,
            current_page: 1
        };

        const wrapper = setup({disabled: true, pagingData: data});
        wrapper.find('page').forEach(page => {
            expect(page.props().disabled).toEqual(true);
        })
    });

    it('component with non-empty paging data, pageChanged called', () => {
        const data = {
            from: 1,
            to: 20,
            total: 60,
            per_page: 20,
            current_page: 1
        };
        const testFunction = jest.fn();
        const wrapper = setup({pagingData: data, onPageChanged: testFunction, isShallow: false});
        wrapper.instance().pageChanged();
        expect(testFunction).toBeCalled();
    });

    it('component with non-empty paging data, next page clicked', () => {
        const data = {
            from: 1,
            to: 20,
            total: 60,
            per_page: 20,
            current_page: 1
        };
        const testFunction = jest.fn();
        const wrapper = setup({pagingData: data, onPageChanged: testFunction, isShallow: false});

        const nextPage = wrapper.find('#pagingNext');
        expect(nextPage.length).toBe(1);
        nextPage.props().onClick();
        expect(testFunction).toBeCalled();
    });

    it('component with non-empty paging data, previous page clicked', () => {
        const data = {
            from: 21,
            to: 40,
            total: 60,
            per_page: 20,
            current_page: 2
        };
        const testFunction = jest.fn();
        const wrapper = setup({pagingData: data, onPageChanged: testFunction, isShallow: false});

        const page = wrapper.find('#pagingPrevious');
        expect(page.length).toBe(1);
        page.props().onClick();
        expect(testFunction).toBeCalled();
    });

    it('component with non-empty paging data, page number is clicked', () => {
        const data = {
            from: 1,
            to: 20,
            total: 60,
            per_page: 20,
            current_page: 1
        };
        const testFunction = jest.fn();
        const wrapper = setup({pagingData: data, onPageChanged: testFunction, isShallow: false});
        const pages = wrapper.find('#pageButton');
        pages.at(1).props().onClick();
        expect(testFunction).toBeCalled();
    });

    it('component with non-empty paging data, state is updated', () => {
        const data = {
            from: 1,
            to: 20,
            total: 60,
            per_page: 20,
            current_page: 1
        };

        const nextData = {
            from: 21,
            to: 40,
            total: 60,
            per_page: 20,
            current_page: 2
        };
        const testFunction = jest.fn();
        const wrapper = setup({pagingData: data, onPageChanged: testFunction, isShallow: false});
        wrapper.instance().componentWillReceiveProps({pagingData: nextData});
        expect(JSON.stringify(wrapper.state())).toBe(JSON.stringify(nextData));

        wrapper.instance().componentWillReceiveProps({pagingData: {}, disabled: true});
        expect(JSON.stringify(wrapper.state())).toBe(JSON.stringify(nextData));
    });

    it('method to render buttons appears as expected for 50 pages on page 25', () => {
        const data = {
            from: 1,
            to: 20,
            total: 1000,
            per_page: 20,
            current_page: 25
        };
        const wrapper = setup({pagingData: data});
        wrapper.setState({...data});
        wrapper.update();
        expect(wrapper.instance().renderPageButtons().length).toEqual(7);
    });

    it('method to render buttons appears as expected for 50 pages on page 1', () => {
        const data = {
            from: 1,
            to: 20,
            total: 1000,
            per_page: 20,
            current_page: 1
        };
        const wrapper = setup({pagingData: data});
        wrapper.setState({...data});
        wrapper.update();
        expect(wrapper.instance().renderPageButtons().length).toEqual(4);
    });

    it('method to render buttons appears as expected for 50 pages on page 50', () => {
        const data = {
            from: 1,
            to: 20,
            total: 1000,
            per_page: 20,
            current_page: 50
        };
        const wrapper = setup({pagingData: data});
        wrapper.setState({...data});
        wrapper.update();
        expect(wrapper.instance().renderPageButtons().length).toEqual(4);
    });


});
