// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div>
  <div
    className="publicationsListPaging is-gapless columns is-gapless is-mobile"
  >
    <div
      className="column is-narrow is-pulled-left"
    >
      <FlatButton
        className="pagingPrevious"
        disabled={true}
        fullWidth={false}
        icon={<NavigationChevronLeft />}
        label="Previous"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="publicationsListPagingItems column is-hidden-mobile has-text-centered"
    >
      <FlatButton
        className="page selectedPage"
        disabled={true}
        fullWidth={false}
        key="0"
        label={1}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
      <FlatButton
        className="page"
        disabled={false}
        fullWidth={false}
        key="1"
        label={2}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
      <FlatButton
        className="page"
        disabled={false}
        fullWidth={false}
        key="2"
        label={3}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-hidden-tablet-only is-hidden-desktop has-text-centered"
    >
      <FlatButton
        className="pagingTotals"
        disabled={false}
        fullWidth={false}
        label="Page 1 of 3"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow is-pulled-right"
    >
      <FlatButton
        className="pagingNext"
        disabled={false}
        fullWidth={false}
        icon={<NavigationChevronRight />}
        label="Next"
        labelPosition="before"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div>
  <div
    className="publicationsListPaging is-gapless columns is-gapless is-mobile"
  >
    <div
      className="column is-narrow is-pulled-left"
    >
      <FlatButton
        className="pagingPrevious"
        disabled={false}
        fullWidth={false}
        icon={<NavigationChevronLeft />}
        label="Previous"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="publicationsListPagingItems column is-hidden-mobile has-text-centered"
    >
      <FlatButton
        className="page"
        disabled={false}
        fullWidth={false}
        key="0"
        label={1}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
      <FlatButton
        className="page"
        disabled={false}
        fullWidth={false}
        key="1"
        label={2}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
      <FlatButton
        className="page selectedPage"
        disabled={true}
        fullWidth={false}
        key="2"
        label={3}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-hidden-tablet-only is-hidden-desktop has-text-centered"
    >
      <FlatButton
        className="pagingTotals"
        disabled={false}
        fullWidth={false}
        label="Page 3 of 3"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow is-pulled-right"
    >
      <FlatButton
        className="pagingNext"
        disabled={true}
        fullWidth={false}
        icon={<NavigationChevronRight />}
        label="Next"
        labelPosition="before"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
  </div>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div>
  <div
    className="publicationsListPaging is-gapless columns is-gapless is-mobile"
  >
    <div
      className="column is-narrow is-pulled-left"
    >
      <FlatButton
        className="pagingPrevious"
        disabled={false}
        fullWidth={false}
        icon={<NavigationChevronLeft />}
        label="Previous"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="publicationsListPagingItems column is-hidden-mobile has-text-centered"
    >
      <FlatButton
        className="page"
        disabled={false}
        fullWidth={false}
        key="0"
        label={1}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
      <FlatButton
        className="page selectedPage"
        disabled={true}
        fullWidth={false}
        key="1"
        label={2}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
      <FlatButton
        className="page"
        disabled={false}
        fullWidth={false}
        key="2"
        label={3}
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-hidden-tablet-only is-hidden-desktop has-text-centered"
    >
      <FlatButton
        className="pagingTotals"
        disabled={false}
        fullWidth={false}
        label="Page 2 of 3"
        labelPosition="after"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
    <div
      className="column is-narrow is-pulled-right"
    >
      <FlatButton
        className="pagingNext"
        disabled={false}
        fullWidth={false}
        icon={<NavigationChevronRight />}
        label="Next"
        labelPosition="before"
        labelStyle={Object {}}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        primary={false}
        secondary={false}
      />
    </div>
  </div>
</div>
`;
